--- a/TastyIO/TastyIO.csproj
+++ b/TastyIO/TastyIO.csproj
@@ -13,6 +13,9 @@
     <PackageIcon>TastyPie_2.png</PackageIcon>
     <Company></Company>
     <Authors>TastyPastry</Authors>
+    <Version>1.0.1</Version>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
