--- a/TastyIO/TastyIO.csproj
+++ b/TastyIO/TastyIO.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="call bin/OpenBin.bat" />
+  </Target>
+
 </Project>
