--- a/TastyIO/TastyIO.csproj
+++ b/TastyIO/TastyIO.csproj
@@ -7,4 +7,8 @@
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
   </Target>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
